# ps-pc

./: ConsoleOutput.hs  ConsoleOutput_test.hs  GlobalTests.hs  HELP.TXT  HelpText.hs  Individuals.md  Main.hs  Model.hs  ModelChecker.hs  ModelChecker_test.hs  Model_test.hs  NastyTests.hs  OutputModel.hs  OutputModel_test.hs  OutputProof.hs  OutputProof_test.hs  Parser.y  ParserBenchmark1.y  ParserBenchmark2.y  Parser_test.hs  PizzaGamma.tex  PizzaGamma1.tex  PizzaGivens1.tex  PizzaModel.tex  PizzaProof.tex  ProjectHome.md  Proof.hs  ProofChecker.hs  ProofChecker_test.hs  ProofSearch.hs  ProofSearchOldWithBrokenCaching.hs  ProofSearchShortestProof.hs  ProofSearchWithCaching.hs  ProofSearch_test.hs  ProofSearch_tmp.hs  ProofSearch_tmp2.hs  ProofUtils.hs  Proof_checker.hs  Proof_checker_test.hs  Proof_test.hs  (+23 more)
Executive Summary/: jannis.tex  ky.tex  michal.tex  sagie.tex  summary.tex
Final Report/: a.tex  b1.tex  b2.tex  bib.bib  c1.tex  c2.tex  conclusion.tex  d.tex  f.tex  introduction.tex  logbook.tex  report.tex
Presentation/: jannis.tex  ky.tex  michal.tex  presentation.tex  sagie.tex
inception_report/: first_a.tex  first_b.tex  first_c.tex  fourth.tex  inception_report.tex  second.tex  third.tex
models/: temp.mod  testconsole.mod
progress_report/: jannis.tex  ky.tex  michal.tex  progress_report.tex  saguy.tex  schedule.tex  summary.tex
validation_report/: jannis.tex  ky.tex  michal.tex  sagie.tex  summary.tex  validation_report.tex
